tests/snapshots/run_wpt_conformance__litert_tan_float16_3D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
tan.https.any.js tan float16 3D tensor, litert
 tan :: tan float16 3D tensor: index 12: actual=-2.9550781 expected=-2.9492188 diff=0.005859375 tolerance=0.001953125
  inputs: tanInput: [52.6875, 70.0625, 90.5, 24.65625, 11.6640625, -50.9375, 40.3125, -9.640625, -31.5625, 5.59375, -55.9375, -44.59375, 80.4375, -2.314453125, -25.46875, 62.59375, -70.9375, 62.84375, 84.8125, -95.5625, 15.5546875, -55.25, -26.890625, 0.1593017578125]
  expected tanOutput: [-0.87646484, 1.390625, -0.6933594, -0.5161133, -1.2666016, -0.79541016, -0.5834961, -0.21923828, -0.14758301, -0.82421875 ...] (len=24)
  actual tanOutput: [-0.8754883, 1.3925781, -0.6923828, -0.5161133, -1.2666016, -0.79541016, -0.58251953, -0.21789551, -0.14770508, -0.8251953 ...] (len=24)
  expected tanOutput full nd:
[-0.87646484, 1.390625, -0.6933594, -0.5161133, -1.2666016, -0.79541016, -0.5834961, -0.21923828, -0.14758301, -0.82421875, ...] (len=24, shape=[2, 3, 4])
  actual tanOutput full nd:
[-0.8754883, 1.3925781, -0.6923828, -0.5161133, -1.2666016, -0.79541016, -0.58251953, -0.21789551, -0.14770508, -0.8251953, ...] (len=24, shape=[2, 3, 4])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    tanInput: f16[2, 3, 4];
  }

  nodes {
    [tanOutput] = tan(tanInput, label="");
  }

  outputs { tanOutput; }
}
